created authentication and refactoring and changing from java 21 to java 11